--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,7 +98,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -109,6 +109,11 @@
          <widget class="QTextBrowser" name="textBrowser"/>
         </item>
        </layout>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>Format</string>
+       </attribute>
       </widget>
       <widget class="QWidget" name="tabStil">
        <attribute name="title">
