--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,8 +31,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>418</height>
+         <width>270</width>
+         <height>423</height>
         </rect>
        </property>
        <attribute name="label">
@@ -49,8 +49,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>418</height>
+         <width>270</width>
+         <height>423</height>
         </rect>
        </property>
        <attribute name="label">
@@ -74,8 +74,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>418</height>
+         <width>270</width>
+         <height>423</height>
         </rect>
        </property>
        <attribute name="label">
@@ -98,7 +98,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -115,6 +115,16 @@
         <string>Format</string>
        </attribute>
       </widget>
+      <widget class="QWidget" name="tab_3">
+       <attribute name="title">
+        <string>Log</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QTextBrowser" name="textLog"/>
+        </item>
+       </layout>
+      </widget>
       <widget class="QWidget" name="tabStil">
        <attribute name="title">
         <string>Stil</string>
@@ -130,7 +140,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuStil">
