--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,8 +31,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>426</height>
+         <width>270</width>
+         <height>431</height>
         </rect>
        </property>
        <attribute name="label">
@@ -49,8 +49,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>426</height>
+         <width>270</width>
+         <height>431</height>
         </rect>
        </property>
        <attribute name="label">
@@ -74,8 +74,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>274</width>
-         <height>426</height>
+         <width>270</width>
+         <height>431</height>
         </rect>
        </property>
        <attribute name="label">
@@ -129,22 +129,12 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="text">
-           <string>Update</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Before:</string>
           </property>
          </widget>
-        </item>
-        <item row="1" column="1" colspan="3">
-         <widget class="QPlainTextEdit" name="plainEditBefore"/>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_4">
@@ -153,24 +143,37 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1" colspan="3">
+        <item row="2" column="1" colspan="2">
          <widget class="QPlainTextEdit" name="plainEditAfter"/>
         </item>
-        <item row="3" column="2">
+        <item row="1" column="1" colspan="2">
+         <widget class="QPlainTextEdit" name="plainEditBefore"/>
+        </item>
+        <item row="5" column="1">
          <widget class="QPushButton" name="pushButton_2">
           <property name="text">
            <string>Previous</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
+        <item row="5" column="2">
          <widget class="QPushButton" name="pushButton">
           <property name="text">
            <string>Next</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="0" colspan="4">
+        <item row="0" column="2">
+         <widget class="QPushButton" name="buttonUpdateFormat">
+          <property name="text">
+           <string>Update</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3" rowspan="7">
+         <widget class="QListWidget" name="listPredefinedFormats"/>
+        </item>
+        <item row="6" column="0" colspan="3">
          <widget class="QTextBrowser" name="browseUsage"/>
         </item>
        </layout>
@@ -200,7 +203,7 @@
      <x>0</x>
      <y>0</y>
      <width>852</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuStil">
